crates/kernel/brioche-macro/tests/ui/fail_plugin_unknown_cap.rs
use brioche_macro::brioche_plugin;

struct UnknownCapPlugin;

#[brioche_plugin(name = "x", capabilities = "UNKNOWN")]
impl OnInput for UnknownCapPlugin {}

fn main() {}
